--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "algoliasearch": "^4.14.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-instantsearch-hooks": "^6.40.0",
+    "textarea-caret": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
